--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 #     Project: Remmina Plugin EXEC
 # Description: Remmina protocol plugin to execute an external process.
-#      Author: Fabio Castelli (Muflone) <muflone@vbsimple.net>
-#   Copyright: 2011-2016 Fabio Castelli (Muflone)
+#      Author: Fabio Castelli (Muflone) <muflone@muflone.com>
+#   Copyright: 2011-2023 Fabio Castelli (Muflone)
 #     License: GPL-2+
 #
 # This program is free software; you can redistribute it and/or modify
